# cutie_cpp

./: .clang-format  .gitignore  .graphifyignore  CLAUDE.md  CMakeLists.txt  Doxyfile  QUICKSTART.md  README.md  build.sh  install.sh  test_onnx_key.py  test_ort_logger.cpp
.claude/: settings.json
cmake/: FindONNXRuntime.cmake  FindTensorRT.cmake  cmake_uninstall.cmake.in  cutieConfig.cmake.in  export_onnx_if_needed.cmake  export_trt_if_needed.cmake
docs/: tensorrt_implementation_plan.md
examples/: demo_basic.cpp  run_release_example.sh
include/cutie/: config.h.in  cutie.h  models.h  types.h  utils.h
include/cutie/common/: cuda_kernels.h  gpu_buffer.h  gpu_image_preprocess.h  gpu_mask_preprocess.h  gpu_memory.h  gpu_postprocess.h  gpu_tensor_ops.h
include/cutie/core/: image_feature_store.h  inference_core.h  kv_memory_store.h  memory_manager.h  memory_utils.h  object_manager.h  processor.h
include/cutie/ort/core/: cuda_kernels.h  gpu_image_preprocess.h  gpu_mask_preprocess.h  gpu_memory.h  gpu_postprocess.h  gpu_tensor_ops.h  ort_config.h  ort_handler.h  ort_types.h  ort_utils.h
include/cutie/ort/cv/: ort_cutie.h
include/cutie/trt/core/: trt_config.h  trt_engine_builder.h  trt_handler.h  trt_types.h
include/cutie/trt/cv/: trt_cutie.h
share/docs/: api_reference.md  inference_comparison.md  requirements.md
share/scripts/: binarize_mask.py  download_models.py  download_models.sh  export_onnx.py  export_tensorrt.py
src/: utils.cpp
src/common/: cuda_kernels.cu  gpu_buffer.cpp  gpu_image_preprocess.cu  gpu_mask_preprocess.cu  gpu_memory.cpp  gpu_postprocess.cu  gpu_tensor_ops.cpp
src/core/: inference_core.cpp  kv_memory_store.cpp  memory_manager.cpp  memory_utils.cpp  object_manager.cpp  processor.cpp
src/ort/core/: cuda_kernels.cu  gpu_buffer.cpp  gpu_image_preprocess.cu  gpu_mask_preprocess.cu  gpu_memory.cpp  gpu_postprocess.cu  gpu_tensor_ops.cpp  ort_handler.cpp  ort_utils.cpp
src/ort/cv/: ort_cutie.cpp
src/trt/core/: trt_engine_builder.cpp  trt_handler.cpp
src/trt/cv/: trt_cutie.cpp
